<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/penambahan"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:id="@+id/button8" />

    <TextView
        android:text="@string/nol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button9"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView8" />

    <TextView
        android:text="@string/jumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:text="@string/barang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView10" />

    <Button
        android:text="@string/submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/button10"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/pengurangan"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/button9"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp" />
</RelativeLayout>